# BaseGraphGraphics

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  style.cpp  svg.cpp  svg.h  vertex_embedding.cpp  vertex_embedding.h  vertex_layouts.cpp  vertex_layouts.h
cmake/: BaseGraphGraphicsConfig.cmake.in
include/BaseGraph/extensions/graphics/: svg.h  vertex_layouts.h
python/: CMakeLists.txt  pybind.cpp
src/: CMakeLists.txt  style.cpp  svg.cpp  vertex_layouts.cpp
